--- a/VHDL/db/Aula3.lpc.html
+++ b/VHDL/db/Aula3.lpc.html
@@ -480,6 +480,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >CPU|MUXADDR</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|REGADDR</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >CPU|DESVIO</TD>
 <TD >6</TD>
 <TD >0</TD>
@@ -501,7 +533,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >11</TD>
+<TD >13</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
