--- a/VHDL/db/Aula3.lpc.html
+++ b/VHDL/db/Aula3.lpc.html
@@ -513,11 +513,11 @@
 </TR>
 <TR >
 <TD >CPU|DESVIO</TD>
-<TD >6</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >3</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -624,28 +624,12 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|REGRD</TD>
-<TD >12</TD>
+<TD >CPU|MUXPM</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >9</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|REGRC</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >9</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -656,31 +640,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|REGRB</TD>
-<TD >12</TD>
+<TD >CPU|RAMREGS</TD>
+<TD >21</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
 <TD >9</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|REGRA</TD>
-<TD >12</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >9</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -817,14 +785,14 @@
 </TR>
 <TR >
 <TD >CPU|MUX2</TD>
-<TD >75</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >18</TD>
+<TD >38</TD>
 <TD >9</TD>
-<TD >18</TD>
-<TD >18</TD>
-<TD >18</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
